---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 2025-10-20
  Minor Features:
    - Add option to use default furnaces as kilns instead of adding new entities
  Modding:
    - Add optional recipe_category parameter to smelt_in_kiln 
---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 2025-06-16
  Changes:
    - Add electric kiln smelting category (credit: S6X)
---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 2025-06-08
  Locale:
    - Add CN locale (credit: Houraiji-Kyuusyou)
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 2025-04-24
  Changes:
    - Add an unlock for the new Coke from carbon recipe
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2025-04-24
  Minor Features:
    - Add recipe to make coke from carbon
  Changes:
    - Undo adding coke to the recipe for carbon (since that'd cause a weird loop)
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2025-04-14
  Changes:
    - Move technology changes to data updates
    - Change kiln smelting technology to always be a research trigger
    - Simplify recipe for electric kiln to be a slightly more expensive electric furnace
    - Reduce module slot count for electric kiln back to 2
  Compatibility:
    - AAI Industry: Add kiln smelting recipes to Industrial furnace, and increase its cost to include LDS and an electric kiln
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2025-03-29
  Compatibility:
    - Reintroduce adding tin plate to glass smelting as an optional feature (enabled by default)