@@ -14,11 +14,14 @@ kiln-smelting=Kiln smelting
 [mod-setting-name]
 alloy-smelting-create-kilns=Create kilns
 alloy-smelting-coke=[item=coke] Coke for steel+
+alloy-smelting-lds-coke=LDS casting requires coke
+alloy-smelting-coke-fuel-value=[item=coke] Coke fuel value
 alloy-smelting-metallurgy=[item=foundry] Metallurgy
 alloy-smelting-tin-glass=[item=tin-plate] Tin glass
 
 [mod-setting-description]
 alloy-smelting-create-kilns=Create special kiln entities; if unchecked, attempt to modify default furnaces instead, which may create compatibility problems with some other mods
 alloy-smelting-coke=Process coal into coke for smelting steel and other modded metals
+alloy-smelting-lds-coke=Determines whether casting low density structure in a foundry also requires coke (Ignored if coke is disabled or if using Iridescent Industry)
 alloy-smelting-metallurgy=Use carbon for advanced alloy smelting in the Foundry
 alloy-smelting-tin-glass=If present, glass becomes an alloy recipe in the kiln and uses Tin in the process of casting plates of glass
